//
// PROJECT:         Aspia
// FILE:            proto/status.proto
// LICENSE:         Mozilla Public License Version 2.0
// PROGRAMMERS:     Dmitry Chapyshev (dmitry@aspia.ru)
//

syntax = "proto3";

option optimize_for = LITE_RUNTIME;

package aspia.proto;

enum Status
{
    STATUS_SUCCESS             = 0;
    STATUS_NO_CONSOLE_SESSION  = 1;
    STATUS_ACCESS_DENIED       = 2;
    STATUS_INVALID_ADDRESS     = 3;
    STATUS_INVALID_PORT        = 4;
    STATUS_CONNECT_TIMEOUT     = 5;
    STATUS_CONNECT_ERROR       = 6;
    STATUS_CONNECTING          = 7;
}
